# eugine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp  run.bat  test.bat
config/: eugine.cfg  graphics.ini
include/eugine/: Eugine.hpp
include/idk/: Idk.hpp
include/idk/camera/: Camera.hpp
include/renderer/: RenderManager.hpp
res/default/shaders/: sh.frag  sh.vert  shL.frag
src/: Eugine.cpp  Eugine.hpp  TypeDef.hpp  main.cpp
src/common/: Manager.hpp
src/concurrent/: JobSystem.cpp  JobSystem.hpp  JobSystemUtils.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/alloc/: PoolAllocator.hpp  StackAllocator.hpp
src/core/config/: Config.hpp  ConfigManager.cpp  ConfigManager.hpp
src/core/hash/: Hash.hpp
src/core/memory/: StackAllocator.hpp
src/core/platform/: Platform.hpp
src/diagnostic/logger/: Logger.cpp  Logger.hpp
src/editor/: EditorManager.cpp  EditorManager.hpp
src/eugine/: Eugine.cpp
src/exceptions/memory/: MemoryExceptions.hpp
src/gui/: GUIManager.cpp  GUIManager.hpp
src/idk/: Idk.cpp
src/profiling/logger/: Logger.hpp
src/renderer/: FrameBuffer.hpp  RenderManager.cpp  RenderManager.hpp
src/renderer/common/: Renderer.hpp  RendererStructs.hpp
src/renderer/directx_renderer/: RendererDX.cpp  RendererDX.hpp
src/renderer/gl_demo/: RendererGLDemo.cpp  RendererGLDemo.hpp
src/renderer/gl_renderer/: FrameBuffer.hpp  RendererGL.cpp  RendererGL.hpp
src/renderer/gl_renderer/camera/: Camera.hpp
src/renderer/gl_renderer/internal/: RendererStructs.hpp
src/renderer/gl_renderer/internal/camera/: Camera.hpp
src/renderer/gl_renderer/model/: Model.cpp  Model.hpp
src/renderer/gl_renderer/model/mesh/: Mesh.cpp  Mesh.hpp
src/renderer/gl_renderer/shader/: Shader.hpp
src/resource/: ResourceManager.cpp  ResourceManager.hpp
src/scene/: SceneManager.cpp  SceneManager.hpp
src/scene/prot/: Scene.cpp  Scene.hpp
src/utils/: Memory.hpp  Subsystem.hpp
test/: main.cpp
test/concurrent/: job_system.cpp
test/memory/: pool_allocator.cpp  stack_allocator.cpp
